<resources>
    <string name="app_name">Quantum IT Innovation</string>
    <string name="social">Social</string>
    <string name="x">X</string>
    <string name="sign_in_text">SignIn into your \nAccount</string>
    <string name="email">Email</string>
    <string name="email_hint">1906286@kiit.ac.in</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_with">Login with</string>
    <string name="register_now">Don\'t have an account? Register now.</string>
    <string name="login">Login</string>
    <string name="create_account">Create an \nAccount</string>
    <string name="name">Name</string>
    <string name="name_hint">Sourabh Kumar Verma</string>
    <string name="contact_no">Contact no</string>
    <string name="in">IN</string>
    <string name="phone_hint">9131377908</string>
    <string name="agree_with_tnc">I am agree with Terms and Conditions.</string>
    <string name="already_have_an_account">Already have an account? Sign In.</string>
    <string name="register">Register</string>
</resources>