<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"

            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:background="@drawable/curved_rect_shape"

            android:layout_marginBottom="@dimen/d_28"
            android:layout_marginTop="@dimen/d_28"

            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:elevation="@dimen/d_28"

            tools:context=".sign_up_or_sign_in.presentation.fragment.SignUpFragment">

            <TextView
                android:id="@+id/create_account_text_view"

                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/d_28"
                android:text="@string/create_account"
                android:textColor="@color/red"

                android:textSize="@dimen/s_22"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/name_text_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/d_8"
                android:text="@string/name"

                android:textColor="@color/black"
                android:textSize="@dimen/s_22"
                app:layout_constraintStart_toStartOf="@id/create_account_text_view"

                app:layout_constraintTop_toBottomOf="@id/create_account_text_view" />

            <EditText
                android:id="@+id/name_edit_text"

                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/d_8"
                android:autofillHints="name"
                android:drawableEnd="@drawable/ic_baseline_person_24"

                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:textColor="@color/black"

                android:textSize="@dimen/s_22"
                app:layout_constraintEnd_toEndOf="@id/create_account_text_view"

                app:layout_constraintStart_toStartOf="@id/create_account_text_view"

                app:layout_constraintTop_toBottomOf="@id/name_text_view" />

            <TextView
                android:id="@+id/email_text_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/d_8"
                android:text="@string/email"

                android:textColor="@color/black"
                android:textSize="@dimen/s_22"
                app:layout_constraintStart_toStartOf="@id/create_account_text_view"

                app:layout_constraintTop_toBottomOf="@id/name_edit_text" />

            <EditText
                android:id="@+id/email_edit_text"

                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/d_8"
                android:autofillHints="emailAddress"
                android:drawableEnd="@drawable/ic_baseline_email_24"

                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"

                android:textSize="@dimen/s_22"
                app:layout_constraintEnd_toEndOf="@id/create_account_text_view"

                app:layout_constraintStart_toStartOf="@id/create_account_text_view"

                app:layout_constraintTop_toBottomOf="@id/email_text_view" />

            <TextView
                android:id="@+id/contact_text_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/d_8"
                android:text="@string/contact_no"

                android:textColor="@color/black"
                android:textSize="@dimen/s_22"
                app:layout_constraintStart_toStartOf="@id/create_account_text_view"

                app:layout_constraintTop_toBottomOf="@id/email_edit_text" />

            <ImageView
                android:id="@+id/flag_image_view"

                android:layout_width="@dimen/d_28"
                android:layout_height="@dimen/d_36"

                android:src="@mipmap/indian_flag"

                app:layout_constraintTop_toBottomOf="@id/contact_text_view"
                app:layout_constraintStart_toStartOf="@id/contact_text_view"
                />

            <TextView
                android:id="@+id/country_name_text_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/in"

                android:layout_marginStart="@dimen/d_8"

                android:textColor="@color/black"

                app:layout_constraintStart_toEndOf="@id/flag_image_view"
                app:layout_constraintTop_toTopOf="@id/flag_image_view"
                app:layout_constraintBottom_toBottomOf="@id/flag_image_view"
                />

            <Spinner
                android:id="@+id/country_code_spinner"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/d_8"

                app:layout_constraintTop_toTopOf="@id/flag_image_view"
                app:layout_constraintStart_toEndOf="@id/country_name_text_view"
                app:layout_constraintBottom_toBottomOf="@id/flag_image_view"
                />

            <EditText
                android:id="@+id/phone_num_edit_text"

                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toEndOf="@id/country_code_spinner"
                app:layout_constraintTop_toTopOf="@id/flag_image_view"
                app:layout_constraintBottom_toBottomOf="@id/flag_image_view"
                app:layout_constraintEnd_toEndOf="@id/email_edit_text"

                android:drawableEnd="@drawable/ic_baseline_call_24"

                android:hint="@string/phone_hint"

                android:layout_marginStart="@dimen/d_8"

                />

            <TextView
                android:id="@+id/password_text_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/d_8"
                android:text="@string/password"

                android:textColor="@color/black"
                android:textSize="@dimen/s_22"
                app:layout_constraintStart_toStartOf="@id/create_account_text_view"

                app:layout_constraintTop_toBottomOf="@id/flag_image_view" />


            <EditText
                android:id="@+id/password_edit_text"

                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/d_8"
                android:autofillHints="password"
                android:drawableEnd="@drawable/ic_baseline_lock_24"

                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="@color/black"

                android:textSize="@dimen/s_22"
                app:layout_constraintEnd_toEndOf="@id/create_account_text_view"

                app:layout_constraintStart_toStartOf="@id/create_account_text_view"

                app:layout_constraintTop_toBottomOf="@id/password_text_view" />

            <CheckBox
                android:id="@+id/checkbox"

                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:text="@string/agree_with_tnc"

                android:buttonTint="@color/red"

                android:layout_marginTop="@dimen/d_8"

                app:layout_constraintTop_toBottomOf="@id/password_edit_text"
                app:layout_constraintStart_toStartOf="@id/password_edit_text"
                app:layout_constraintEnd_toEndOf="@id/password_edit_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/already_have_an_account"
                android:textColor="@color/black"

                android:layout_marginTop="@dimen/d_8"

                app:layout_constraintTop_toBottomOf="@id/checkbox"
                app:layout_constraintStart_toStartOf="@id/password_edit_text"
                app:layout_constraintEnd_toEndOf="@id/password_edit_text"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/register"
            android:textColor="@color/white"

            android:background="@drawable/button_background"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>