<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"

            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:background="@drawable/curved_rect_shape"

            android:layout_marginBottom="@dimen/d_28"
            android:layout_marginTop="@dimen/d_28"

            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:elevation="@dimen/d_28"

            tools:context=".sign_up_or_sign_in.presentation.fragment.LoginFragment">

            <TextView
                android:id="@+id/sign_in_text_view"

                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/d_28"
                android:text="@string/sign_in_text"
                android:textColor="@color/red"

                android:textSize="@dimen/s_22"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/email_text_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/d_8"
                android:text="@string/email"

                android:textColor="@color/black"
                android:textSize="@dimen/s_22"
                app:layout_constraintStart_toStartOf="@id/sign_in_text_view"

                app:layout_constraintTop_toBottomOf="@id/sign_in_text_view" />

            <EditText
                android:id="@+id/email_edit_text"

                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/d_8"
                android:autofillHints="emailAddress"
                android:drawableEnd="@drawable/ic_baseline_email_24"

                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"

                android:textSize="@dimen/s_22"
                app:layout_constraintEnd_toEndOf="@id/sign_in_text_view"

                app:layout_constraintStart_toStartOf="@id/sign_in_text_view"

                app:layout_constraintTop_toBottomOf="@id/email_text_view" />

            <TextView
                android:id="@+id/password_text_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/d_8"
                android:text="@string/password"

                android:textColor="@color/black"
                android:textSize="@dimen/s_22"
                app:layout_constraintStart_toStartOf="@id/sign_in_text_view"

                app:layout_constraintTop_toBottomOf="@id/email_edit_text" />

            <EditText
                android:id="@+id/password_edit_text"

                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/d_8"
                android:autofillHints="password"
                android:drawableEnd="@drawable/ic_baseline_lock_24"

                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="@color/black"

                android:textSize="@dimen/s_22"
                app:layout_constraintEnd_toEndOf="@id/sign_in_text_view"

                app:layout_constraintStart_toStartOf="@id/sign_in_text_view"

                app:layout_constraintTop_toBottomOf="@id/password_text_view" />

            <TextView
                android:id="@+id/forgot_password"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/d_8"
                android:text="@string/forgot_password"

                android:textColor="@color/red"
                app:layout_constraintEnd_toEndOf="@id/password_edit_text"

                app:layout_constraintTop_toBottomOf="@id/password_edit_text" />

            <TextView
                android:id="@+id/login_with_text_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/d_8"
                android:text="@string/login_with"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/forgot_password" />

            <ImageView
                android:id="@+id/google_logo"

                android:layout_width="@dimen/d_48"
                android:layout_height="@dimen/d_48"

                android:layout_marginTop="@dimen/d_8"

                android:layout_marginEnd="@dimen/d_28"

                android:src="@mipmap/google_logo"

                app:layout_constraintEnd_toStartOf="@id/facebook_logo"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_with_text_view" />

            <ImageView
                android:id="@+id/facebook_logo"

                android:layout_width="@dimen/d_48"
                android:layout_height="@dimen/d_48"

                android:layout_marginStart="@dimen/d_28"

                android:layout_marginTop="@dimen/d_8"

                android:src="@mipmap/facebook_logo"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/google_logo"
                app:layout_constraintTop_toBottomOf="@id/login_with_text_view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/d_8"

                android:text="@string/register_now"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/google_logo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/login"
            android:textColor="@color/white"

            android:background="@drawable/button_background"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>